--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Jeu de Morpion</h1>
-    <div id="board">
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-        <div class="cell" data-cell></div>
-    </div>
-    <div id="winning-message" class="winning-message">
-        <div data-winning-message-text></div>
-        <button id="restartButton">Recommencer</button>
+    <header><h1>Le jeu du morpion</h1></header>
+    <div id="container">
+        <section>
+            <div id="Jeu">
+                <div>
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+                <div>
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+                <div>
+                    <button></button>
+                    <button></button>
+                    <button></button>
+                </div>
+            </div> 
+        </section>
+        <aside>
+            <div id="StatutJeu"></div>
+        </aside>
     </div>
     <script src="script.js"></script>
 </body>
