feat/ changement sur le design

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Le jeu du morpion</h1></header>
     <div id="container">
         <section>
             <div id="Jeu">
@@ -29,6 +28,14 @@
             </div> 
         </section>
         <aside>
+            <div class="window-header">
+                <span>Morpion</span>
+                <div class="window-controls">
+                    <button class="minimize"></button>
+                    <button class="maximize"></button>
+                    <button class="close"></button>
+                </div>
+            </div>
             <div id="StatutJeu"></div>
         </aside>
     </div>
